Fix CMake warning.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,4 +83,4 @@ foreach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
     string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
     get_filename_component( problembasename ${problemfullname} NAME )
 	add_test( NAME ${problembasename} COMMAND $<TARGET_FILE:google_code_jam> ${problembasename} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
-endforeach( problemsourcefile ${GOOGLE_CODE_JAM_SOURCES} )
+endforeach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
