--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,5 +82,5 @@ foreach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
     string( REPLACE ".in" "" problemfullname ${testfile_in} )
     string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
     get_filename_component( problembasename ${problemfullname} NAME )
-	add_test( NAME ${problembasename} COMMAND $<TARGET_FILE:google_code_jam> ${problembasename} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
+	add_test( NAME ${problembasename} COMMAND google_code_jam ${problembasename} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
