Enable testing for Hackerrank problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,3 +84,12 @@ foreach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
     get_filename_component( problembasename ${problemfullname} NAME )
 	add_test( NAME ${problembasename} COMMAND google_code_jam ${problembasename} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
+
+file( GLOB_RECURSE HACKERRANK_TESTS RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tests/hackerrank/*.in" )
+list( SORT HACKERRANK_TESTS )
+foreach( testfile_in ${HACKERRANK_TESTS} )
+    string( REPLACE ".in" "" problemfullname ${testfile_in} )
+    string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
+    get_filename_component( problembasename ${problemfullname} NAME )
+	add_test( NAME ${problembasename} COMMAND hackerrank ${problembasename} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
+endforeach( testfile_in ${HACKERRANK_TESTS} )
