Run hackerrank tests only in release mode to save time.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,5 +91,5 @@ foreach( testfile_in ${HACKERRANK_TESTS} )
     string( REPLACE ".in" "" problemfullname ${testfile_in} )
     string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
     get_filename_component( problembasename ${problemfullname} NAME )
-	add_test( NAME ${problembasename} COMMAND hackerrank ${problembasename} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
+	add_test( NAME ${problembasename} COMMAND hackerrank ${problembasename} ${testfile_in} ${testfile_out} CONFIGURATIONS Release WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_in ${HACKERRANK_TESTS} )
