Support several tests for same poblem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,17 +79,19 @@ enable_testing()
 file( GLOB_RECURSE GOOGLE_CODE_JAM_TESTS RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tests/google/code_jam/*.in" )
 list( SORT GOOGLE_CODE_JAM_TESTS )
 foreach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
-    string( REPLACE ".in" "" problemfullname ${testfile_in} )
+    string( REPLACE ".in" "" testfullname ${testfile_in} )
     string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
-    get_filename_component( problembasename ${problemfullname} NAME )
-	add_test( NAME ${problembasename} COMMAND google_code_jam ${problembasename} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
+    get_filename_component( testshortname ${testfullname} NAME )
+    get_filename_component( solution ${testshortname} NAME_WE )
+	add_test( NAME ${testshortname} COMMAND google_code_jam ${solution} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
 
 file( GLOB_RECURSE HACKERRANK_TESTS RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tests/hackerrank/*.in" )
 list( SORT HACKERRANK_TESTS )
 foreach( testfile_in ${HACKERRANK_TESTS} )
-    string( REPLACE ".in" "" problemfullname ${testfile_in} )
+    string( REPLACE ".in" "" testfullname ${testfile_in} )
     string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
-    get_filename_component( problembasename ${problemfullname} NAME )
-	add_test( NAME ${problembasename} COMMAND hackerrank ${problembasename} ${testfile_in} ${testfile_out} CONFIGURATIONS Release WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
+    get_filename_component( testshortname ${testfullname} NAME )
+    get_filename_component( solution ${testshortname} NAME_WE )
+	add_test( NAME ${testshortname} COMMAND hackerrank ${solution} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_in ${HACKERRANK_TESTS} )
