--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,3 +95,5 @@ foreach( testfile_in ${HACKERRANK_TESTS} )
     get_filename_component( solution ${testshortname} NAME_WE )
 	add_test( NAME ${testshortname} COMMAND hackerrank ${solution} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_in ${HACKERRANK_TESTS} )
+
+add_test( NAME binary_search_tree COMMAND tester binary_search_tree )
