--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,3 +109,4 @@ foreach( testfile_in ${HACKERRANK_TESTS} )
 endforeach( testfile_in ${HACKERRANK_TESTS} )
 
 add_test( NAME tester_binary_search_tree COMMAND tester binary_search_tree )
+add_test( NAME tester_interpolation COMMAND tester interpolation )
