Add tester for Mertens numbers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,3 +111,4 @@ endforeach( testfile_in ${HACKERRANK_TESTS} )
 add_test( NAME tester_binary_search_tree COMMAND tester binary_search_tree )
 add_test( NAME tester_convergent COMMAND tester convergent )
 add_test( NAME tester_interpolation COMMAND tester interpolation )
+add_test( NAME tester_mertens COMMAND tester mertens )
