Support solutions for http://acm.timus.ru problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,30 @@ endforeach( problemsourcefile ${IPCS_SOURCES} )
 file ( APPEND ${IPCS_PROXY_CXX} "};\n" )
 add_executable( ipcs ${IPCS_SOURCES} ${IPCS_PROXY_CXX} )
 
+file( GLOB_RECURSE TIMUS_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/timus/*.cpp" )
+list( SORT TIMUS_SOURCES )
+set( TIMUS_PROXY_H "${PROJECT_SOURCE_DIR}/timus/proxy_gen.h" )
+set( TIMUS_PROXY_CXX "${PROJECT_SOURCE_DIR}/timus/proxy_gen.cxx" )
+file ( WRITE ${TIMUS_PROXY_H}
+	"#pragma once\n\n" )
+file ( WRITE ${TIMUS_PROXY_CXX}
+	"#include \"common/proxy_run_base.h\"\n"
+    "#include \"proxy_gen.h\"\n"
+	"\n"
+	"TSolutionsMap solutions_map {\n")
+foreach( problemsourcefile ${TIMUS_SOURCES} )
+    string( REPLACE ".cpp" "" problemfullname ${problemsourcefile} )
+    get_filename_component( problembasename ${problemfullname} NAME )
+    if ( NOT ${problembasename} MATCHES "main")
+        file ( APPEND ${TIMUS_PROXY_H}
+			"int main_${problembasename}();\n" )
+        file ( APPEND ${TIMUS_PROXY_CXX}
+			"\t{ \"${problembasename}\", main_${problembasename} },\n")
+    endif ( NOT ${problembasename} MATCHES "main")
+endforeach( problemsourcefile ${TIMUS_SOURCES} )
+file ( APPEND ${TIMUS_PROXY_CXX} "};\n" )
+add_executable( timus ${TIMUS_SOURCES} ${TIMUS_PROXY_CXX} )
+
 file( GLOB_RECURSE TESTER_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tester/*.cpp" )
 add_executable( tester ${TESTER_SOURCES} )
 
@@ -107,6 +131,16 @@ foreach( testfile_in ${HACKERRANK_TESTS} )
     get_filename_component( solution ${testshortname} NAME_WE )
 	add_test( NAME ${testshortname} COMMAND hackerrank ${solution} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_in ${HACKERRANK_TESTS} )
+
+file( GLOB_RECURSE TIMUS_TESTS RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tests/timus/*.in" )
+list( SORT TIMUS_TESTS )
+foreach( testfile_in ${TIMUS_TESTS} )
+    string( REPLACE ".in" "" testfullname ${testfile_in} )
+    string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
+    get_filename_component( testshortname ${testfullname} NAME )
+    get_filename_component( solution ${testshortname} NAME_WE )
+	add_test( NAME "timus.${testshortname}" COMMAND timus ${solution} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
+endforeach( testfile_in ${TIMUS_TESTS} )
 
 add_test( NAME tester_binary_search_tree COMMAND tester binary_search_tree )
 add_test( NAME tester_convergent COMMAND tester convergent )
