Add tester for ModularFFT.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,3 +146,4 @@ add_test( NAME tester_binary_search_tree COMMAND tester binary_search_tree )
 add_test( NAME tester_convergent COMMAND tester convergent )
 add_test( NAME tester_interpolation COMMAND tester interpolation )
 add_test( NAME tester_mertens COMMAND tester mertens )
+add_test( NAME tester_modular_fft COMMAND tester modular_fft )
