--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "editor.formatOnType": true,
+    "editor.formatOnSave": true,
     "files.associations": {
         "array": "cpp",
         "bitset": "cpp",
