Fix warning for hackerrank c problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ file ( APPEND ${HACKERRANK_PROXY_C_C}
     "  printf(\"Unknown solution name: %s\", solution_name);\n"
     "  return -2;\n}\n" )
 add_executable( hackerrank_c ${HACKERRANK_C_SOURCES} ${HACKERRANK_PROXY_C_C} )
+set_target_properties( hackerrank_c PROPERTIES COMPILE_FLAGS "-Wno-unused-result" )
 
 file( GLOB_RECURSE IPCS_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/ipcs/*.cpp" )
 list( SORT IPCS_SOURCES )
