--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ set_target_properties( hackerrank_c PROPERTIES COMPILE_FLAGS "-Wno-unused-result
 
 file( GLOB_RECURSE ICFPPC_2019_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/icfppc/2019/*.cpp" )
 add_executable( icfppc_2019 ${ICFPPC_2019_SOURCES} )
+target_include_directories(icfppc_2019 PRIVATE "${PROJECT_SOURCE_DIR}/icfppc/2019/src" )
 
 file( GLOB_RECURSE IPCS_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/ipcs/*.cpp" )
 list( SORT IPCS_SOURCES )
