--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "optional": "cpp",
         "algorithm": "cpp",
         "string": "cpp",
-        "cstdarg": "cpp"
+        "cstdarg": "cpp",
+        "cassert": "cpp"
     }
 }
